--- a/template/header.html
+++ b/template/header.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Restaurant</title>
+        <title>Le restologue</title>
         <meta charset="UTF-8">
         <link rel="icon" type="image/png" href="./favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
